# freertos_cpp_wrappers

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  COMPREHENSIVE_COVERAGE_REPORT.md  COMPREHENSIVE_PROJECT_VALIDATION.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  COVERAGE_REPORT.md  DESIGN_REVIEW_REPORT_v3.2.0.md  DETAILED_COVERAGE_REPORT.md  Dockerfile  Dockerfile.simulation  Doxyfile  ENHANCED_COVERAGE_REPORT.md  ENHANCED_TEST_REPORT.md  ENHANCED_TEST_REPORT_V2.md  ENHANCED_TEST_REPORT_V3.md  Kconfig  LICENSE  MISRA_ANALYSIS_REPORT.md  README.md  SECURITY.md  STATIC_ANALYSIS_REPORT.html  STATIC_ANALYSIS_REPORT.md  TEST_FAILURE_ANALYSIS.md  TEST_REPORT.md  VALIDATION_VERIFICATION_REPORT.html  VALIDATION_VERIFICATION_REPORT.md  coverage.info  docker-compose.yml  misra.json  misra_analysis.txt  mkdocs.yml  static_analysis_current.txt  static_analysis_current_clean.txt  task_coverage.info
.github/workflows/: ci.yml
VnV/: STATIC_ANALYSIS_CLANG_TIDY.md  STATIC_ANALYSIS_CPPCHECK.md  VALIDATION_VERIFICATION_REPORT.md  VALIDATION_VERIFICATION_REPORT_20260311_102041.html  VALIDATION_VERIFICATION_REPORT_20260311_102041.md
cmake/: arm-cortex-m3-toolchain.cmake  arm-none-eabi-toolchain.cmake  freertos_cpp_wrappersConfig.cmake.in
configs/: FreeRTOSConfig_full.h  FreeRTOSConfig_minimal.h  FreeRTOSConfig_safety.h  FreeRTOSConfig_simulation.h  FreeRTOSConfig_standard.h  README.md
coverage_html/: cmd_line  index-sort-f.html  index-sort-l.html  index.html
coverage_html/include/: freertos_task.hpp.func-c.html  freertos_task.hpp.func.html  freertos_task.hpp.gcov.html  index.html  (+2 more)
docs/: configuration.md  custom.css  decision-trees.md  examples.dox  index.md  mainpage.dox  migration-v1-to-v2.md  performance.md  v2_dependency_diagram.md
include/: freertos.hpp  freertos_atomic.hpp  freertos_atomic_wait.hpp  freertos_clock.hpp  freertos_concepts.hpp  freertos_condition_variable.hpp  freertos_config.hpp  freertos_cpp_wrappers_config.hpp.in  freertos_event_group.hpp  freertos_expected.hpp  freertos_external_allocator.hpp  freertos_external_threading.hpp  freertos_fixed_function.hpp  freertos_gthr.hpp  freertos_heap.hpp  freertos_isr_context.hpp  freertos_isr_result.hpp  freertos_latch.hpp  freertos_lock.hpp  freertos_message_buffer.hpp  freertos_once_flag.hpp  freertos_pend_call.hpp  freertos_queue.hpp  freertos_queue_set.hpp  freertos_semaphore.hpp  freertos_shared_data.hpp  freertos_shared_mutex.hpp  freertos_span.hpp  freertos_stream_batching_buffer.hpp  freertos_stream_buffer.hpp  freertos_strong_types.hpp  freertos_sw_timer.hpp  freertos_task.hpp  freertos_thread_safety.hpp  freertos_version.hpp.in
scripts/: README.md  combine_reports.py  create_html_report.py  filter_coverage.py  format_code.sh  gen_config.py  generate_combined_validation_report.sh  generate_comprehensive_validation_report.sh  generate_documentation.sh  generate_embedded_static_analysis.py  generate_final_validation_report.sh  generate_html_report.py  generate_real_validation_report.sh  generate_static_analysis_report.sh  generate_validation_verification_report.py  generate_validation_verification_report.sh  get_project_version.sh  misra_rule_descriptions.py  parse_clang_tidy_detailed.py  parse_clang_tidy_stats.py  parse_clang_tidy_violations.py  parse_enhanced_cppcheck_report.py  parse_misra_report.py  report_template.html  run_enhanced_cppcheck_analysis.sh  run_misra_analysis.sh  run_tests_and_generate_reports.sh  test_documentation.sh
src/: freertos_atomic_wait.cc  freertos_sw_timer.cc  freertos_task.cc
tests/: CMakeLists.txt  README.md  test_enhanced_cpp17_features.cpp  test_enhanced_debug.cpp  test_enhanced_freertos_sw_timer.cpp  test_enhanced_multitasking.cpp  test_enhanced_timeout_precision.cpp  test_freertos.cpp  test_freertos_atomic.cpp  test_freertos_atomic_wait.cpp  test_freertos_claim.cpp  test_freertos_clock.cpp  test_freertos_concepts.cpp  test_freertos_concurrency.cpp  test_freertos_condition_variable.cpp  test_freertos_config.cpp  test_freertos_config_kconfig.cpp  test_freertos_coverage_alloc_swap.cpp  test_freertos_coverage_api.cpp  test_freertos_coverage_branches.cpp  test_freertos_coverage_branches2.cpp  test_freertos_coverage_branches3.cpp  test_freertos_coverage_branches4.cpp  test_freertos_coverage_event_group2.cpp  test_freertos_coverage_ex_variants.cpp  test_freertos_coverage_exception_safety.cpp  test_freertos_coverage_expected2.cpp  test_freertos_coverage_expected3.cpp  test_freertos_coverage_external_allocator2.cpp  test_freertos_coverage_external_allocator3.cpp  test_freertos_coverage_external_allocator4.cpp  test_freertos_coverage_faults.cpp  test_freertos_coverage_gaps.cpp  test_freertos_coverage_isr.cpp  test_freertos_coverage_misc_branches.cpp  test_freertos_coverage_queue2.cpp  test_freertos_coverage_queue_timer_task.cpp  test_freertos_coverage_sa.cpp  test_freertos_coverage_sa_ns.cpp  test_freertos_coverage_semaphores.cpp  (+50 more)
tests/cross_compile/: CMakeLists.txt  FreeRTOSConfig.h  linker.ld  run_xcompile_check.sh.in  startup.c  test_xcompile_et.cpp  test_xcompile_gthr.cpp  test_xcompile_wrappers.cpp
tests/freertos_stubs/: FreeRTOS.h  event_groups.h  freertos_stubs.cpp  message_buffer.h  queue.h  semphr.h  stream_buffer.h  task.h  timers.h
tests/mocks/: FreeRTOS.h  enhanced_freertos_mock.hpp  enhanced_freertos_stl_mocks.cpp  enhanced_timer_mocks.cpp  enhanced_timer_mocks.hpp  event_groups.h  freertos_mocks.cpp  freertos_mocks.hpp  message_buffer.h  queue.h  semphr.h  stl_semaphore_mocks.hpp  stream_buffer.h  task.h  timers.h
tests/qemu/: CMakeLists.txt  FreeRTOSConfig.h  linker.ld  main.c  startup.c  uart.h
tests/simulation/: CMakeLists.txt  FreeRTOSConfig.h  README.md  sim_app_hooks.cpp  sim_test_fixture.hpp  test_sim_concurrency.cpp  test_sim_event_group.cpp  test_sim_isr.cpp  test_sim_message_buffer.cpp  test_sim_move_swap.cpp  test_sim_mutex.cpp  test_sim_queue.cpp  test_sim_semaphore.cpp  test_sim_smoke.cpp  test_sim_stdlib.cpp  test_sim_stream_buffer.cpp  test_sim_system.cpp  test_sim_task.cpp  test_sim_timer.cpp
(+187 files in other folders)
